--- a/custom_components/solaris/translations/en.json
+++ b/custom_components/solaris/translations/en.json
@@ -1,9 +1,21 @@
 {
     "config": {
-      "step": {
-        "user": {
-          "title": "Solaris Setup"
+        "abort": {
+            "already_configured": "[%key:common::config_flow::abort::already_configured_device%]"
+        },
+        "error": {
+            "cannot_connect": "[%key:common::config_flow::error::cannot_connect%]",
+            "invalid_auth": "[%key:common::config_flow::error::invalid_auth%]",
+            "unknown": "[%key:common::config_flow::error::unknown%]"
+        },
+        "step": {
+            "user": {
+                "data": {
+                    "host": "[%key:common::config_flow::data::host%]",
+                    "password": "[%key:common::config_flow::data::password%]",
+                    "username": "[%key:common::config_flow::data::username%]"
+                }
+            }
         }
-      }
-    }
-  }
+   }
+}
